--- a/index.html
+++ b/index.html
@@ -27,24 +27,43 @@
 
         #controls {
             transition: background 0.3s, color 0.3s;
+            transform: translateX(-100%);
+            transition: transform 0.3s ease;
+        }
+
+        #controls.open {
+            transform: translateX(0) !important;
+        }
+
+        @media (min-width: 768px) {
+            #controls {
+                transform: translateX(0) !important;
+                border-radius: 0 10px 10px 0;
+            }
+
+            #toggleSidebar {
+                display: none;
+            }
         }
     </style>
 </head>
 
 <body>
+    <!-- Toggle Button -->
+    <button id="toggleSidebar"
+        style="position: fixed; top: 10px; left: 10px; z-index: 2; font-size: 20px; background: #333; color: white; border: none; border-radius: 4px; padding: 6px 10px; cursor: pointer;">☰</button>
+
+    <!-- Controls Sidebar -->
     <div id="controls"
-        style="position: fixed; top: 10px; left: 10px; background: rgba(0,0,0,0.7); color: white; padding: 10px; border-radius: 8px; font-family: sans-serif; max-height: 90vh; overflow-y: auto; z-index: 1;">
+        style="position: fixed; top: 0; left: 0; background: rgba(0, 0, 0, 0.85); color: white; padding: 10px; border-radius: 0 10px 10px 0; font-family: sans-serif; max-height: 100vh; overflow-y: auto; z-index: 1; width: 250px; transform: translateX(-100%); transition: transform 0.3s ease;">
         <button id="pauseBtn">Pause</button>
         <button id="themeToggle">Dark/Light</button>
         <h3>Orbit Speed Controls</h3>
+        <div id="controls-container"></div>
     </div>
-
-    <!-- Three.js Canvas is appended here by JS -->
 
     <!-- Three.js CDN -->
     <script src="https://cdn.jsdelivr.net/npm/three@0.160.1/build/three.min.js"></script>
-
-
     <script src="solar_system.js"></script>
 </body>
 
